# python-crypto-dot-com-sdk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt  requirements_lock.txt  setup.cfg  setup.py  tasks.py
.github/workflows/: ci.yml  publish.yml  python-app.yml  python-package.yml
crypto_dot_com/: client.py  client_db.py  enums.py  export.py  request_builder.py  settings.py  utils.py
crypto_dot_com/data_models/: mappings.py  order_history.py  request_message.py  response.py
tasks/: __init__.py  code.py  version.py
tests/: test_client.py  test_client_real_responses.py  test_enums.py  test_export.py
tests/fixtures/: private_create_order.json  private_get_order_detail.json  private_get_order_history.json  private_get_trades.json  private_user_balance.json  public_get_candlestick.json
