[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-crypto-dot-com-sdk"
dynamic = ["version"]
description = "A simple python wrapper for crypto.com API"
readme = "README.md"
license = {text = "Apache 2.0"}
authors = [{name = "Javad Ebadi", email = "javad@javadebadi.com"}]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "pandas-stubs",
    "pandas",
    "xarizmi>=0.13.0",
    "mplfinance",
    "scipy",
    "pytz",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/javadebadi/python-crypto-dot-com-sdk"

[tool.hatch.version]
path = "crypto_dot_com/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["crypto_dot_com"]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=24.4.0",
    "blacken-docs>=1.16.0",
    "flake8>=7.0.0",
    "invoke>=2.2.0",
    "isort>=5.13.2",
    "mypy>=1.9.0",
    "pytest>=8.1.1",
    "types-requests>=2.31.0",
]

[tool.black]
line-length = 79
