[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-crypto-dot-com-sdk"
dynamic = ["version"]
description = "A simple python wrapper for crypto.com API"
readme = "README.md"
license = {text = "Apache 2.0"}
authors = [{name = "Javad Ebadi", email = "javad@javadebadi.com"}]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "pandas-stubs",
    "pandas",
    "xarizmi>=0.18.0",
    "mplfinance",
    "scipy",
    "pytz",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/javadebadi/python-crypto-dot-com-sdk"

[tool.hatch.version]
path = "crypto_dot_com/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["crypto_dot_com"]

[dependency-groups]
dev = [
    "bandit>=1.7.0",
    "black>=24.4.0",
    "coverage>=7.0.0",
    "interrogate>=1.5.0",
    "invoke>=2.2.0",
    "mypy>=1.9.0",
    "pandas-stubs>=3.0.0.260204",
    "pip-audit>=2.7.0",
    "pip-licenses>=5.0.0",
    "pylint>=3.0.0",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "radon>=6.0.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a6",
    "types-pytz>=2025.2.0.20251108",
    "types-requests>=2.31.0",
    "vulture>=2.11",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-ignore = ["E203", "E501"]
